--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -3,7 +3,7 @@
 #定时脚本
 
 #爱奇艺
-cron "1 0 * * *" script-path=https://github.com/NobyDa/Script/blob/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺
 
 #吾爱破解
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=吾爱破解
