--- a/Loon/Script.conf
+++ b/Loon/Script.conf
@@ -1,6 +1,6 @@
 #脚本
 
-hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com
+hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, api1000.cvxia.com,
 
 # > 淘宝比价
 # 不生效或失效的需要卸载 tb 重装，注意不开脚本进 tb 会失效
@@ -12,9 +12,11 @@ http-request ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22vide
 http-response ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js,tag=奈飞评分2
 http-response ^https?://ios\.prod\.ftl\.netflix\.com/iosui/warmer/.+type=show-ath requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating_season.js,tag=单集评分
 
-# > 微信公众号
-http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://Choler.github.io/Surge/Script/WeChat.js,tag=微信公众号广告
+# > 微信去广告 
+http-response ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js,tag=微信公众号广告
 
 # > 爱美剧Vip (by huihui）(官网：app.meiju2018.com)
 http-response ^https?:\/\/api.bjxkhc.com\/index\.php\/app\/ios\/(vod\/show|(user|vod|topic|type)\/index) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/aimeiju.js,tag=爱美剧
 
+# > 黄瓜视频
+http-response ^https:\/\/ap1000\.cvxia\.com\/(user\/info|mov\/browse2*) script-path=https://raw.githubusercontent.com/fg11111/huafeihua/master/hgsp.js, requires-body=true, timeout=10, tag=黄瓜视频
