--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -47,9 +47,11 @@ https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) url script-response-bo
 # 腾讯新闻
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/fg11111/huafeihua/master/txnews.js
 
-#小小影视
+# 小小影视
 https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-response-body https://raw.githubusercontent.com/fg11111/huafeihua/master/xxys.js
-https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-response-body https://raw.githubusercontent.com/fg11111/huafeihua/master/xxysad.js
 
-#Adguard.js
+# 小小影视去广告
+https://raw.githubusercontent.com/fg11111/huafeihua/master/xxysad.js
+
+# Adguard
 https://raw.githubusercontent.com/fg11111/huafeihua/master/xxysad.js
