--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -19,3 +19,7 @@ cron "30 7 * * *" script-path=https://raw.githubusercontent.com/nzw9314/Quantumu
 #2.现阶段每日共9个阶梯红包，具体阅读篇数视腾讯情况而变动
 #3.脚本运行一次阅读一篇文章，请不要连续运行，防止封号，可设置每几分钟运行一次
 cron "*/8 * * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/txnews.js,tag=腾讯新闻
+
+# > 腾讯新闻2
+cron "*/8 * * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js, enabled=true, tag=腾讯新闻2
+http-request https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js, requires-body=true
