--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -14,12 +14,6 @@ cron "0 8 * * *" script-path=https://raw.githubusercontent.com/nzw9314/Quantumul
 # > 每日一句+ 蚂蚁森林收能量
 cron "30 7 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/yichahucha/cron_daily.js,tag=每日一句+蚂蚁森林收能量
 
-# > 腾讯新闻 (By 红鲤鱼与绿鲤鱼与驴 & @Macsuny)
-#1.打开腾讯新闻app，阅读一篇文章，倒计时结束后即可获取Cookie
-#2.现阶段每日共9个阶梯红包，具体阅读篇数视腾讯情况而变动
-#3.脚本运行一次阅读一篇文章，请不要连续运行，防止封号，可设置每几分钟运行一次
-cron "*/8 * * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/txnews.js,tag=腾讯新闻
+# > 腾讯新闻
+cron "*/8 * * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js, enabled=true, tag=腾讯新闻
 
-# > 腾讯新闻2
-cron "*/8 * * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js, enabled=true, tag=腾讯新闻2
-http-request https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js, requires-body=true
