--- a/Loon/Task.conf
+++ b/Loon/Task.conf
@@ -1,11 +1,11 @@
-#签到脚本
+# > 签到脚本
 
-#定时脚本
+# > 定时脚本
 
-#爱奇艺
+# > 爱奇艺
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺
 
-#吾爱破解
+# > 吾爱破解
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=吾爱破解
 
 # > 一言
