--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -118,7 +118,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 
 https://raw.githubusercontent.com/fg11111/huafeihua/master/QuantumultX/Script.conf, tag=脚本, update-interval=86400, opt-parser=false, enabled=true
 
-https://raw.githubusercontent.com/fg11111/huafeihua/master/QuantumultX/Cookie.conf, tag=Cookie, update-interval=86400, opt-parser=false, enabled=tru
+https://raw.githubusercontent.com/fg11111/huafeihua/master/QuantumultX/Cookie.conf, tag=Cookie, update-interval=86400, opt-parser=false, enabled=true
 
 
 [server_local]
