--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,6 +1,6 @@
 # 脚本
 
-hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, *.amemv.com, aweme.snssdk.com, api1000.cvxia.com, api.inews.qq.com, 
+hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, *.amemv.com, aweme.snssdk.com, api1000.cvxia.com, api.inews.qq.com, *.xxjjappss.com
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
@@ -49,3 +49,7 @@ https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-reque
 
 # 91短视频
 ^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/91.js
+
+
+
+https:\/\/.*\..*\.com\/(getGlobalData) url script-response-bodyhttps://raw.githubusercontent.com/fg11111/huafeihua/master/xxysad
