--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -50,6 +50,5 @@ https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-reque
 # 91短视频
 ^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/91.js
 
-
-
+# 小小影视
 https:\/\/.*\..*\.com\/(getGlobalData) url script-response-bodyhttps://raw.githubusercontent.com/fg11111/huafeihua/master/xxysad
