--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -51,4 +51,4 @@ https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-reque
 ^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/91.js
 
 # 小小影视
-https:\/\/.*\..*\.com\/(getGlobalData) url script-response-bodyhttps://raw.githubusercontent.com/fg11111/huafeihua/master/xxysad.js
+https:\/\/.*\..*\.com\/(getGlobalData) url script-response-body https://raw.githubusercontent.com/fg11111/huafeihua/master/xxysad.js
