--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -143,6 +143,10 @@ https://raw.githubusercontent.com/fg11111/huafeihua/master/QuantumultX/Cookie.co
 #浏览器访问https://www.52pojie.cn/home.php?mod=space 即可
 2 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=52破解, img-url=https://raw.githubusercontent.com/Orz-3/task/master/52pj.png, enabled=true
 
+# 腾讯视频
+#1.手机浏览器访问并登录: https://film.qq.com/
+1 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js, tag=腾讯视频, img-url=https://raw.githubusercontent.com/Orz-3/task/master/videoqq.png,enabled=true
+
 # 腾讯新闻
 */6 * * * * https://raw.githubusercontent.com/fg11111/huafeihua/master/txnews.js, tag=腾讯新闻, img-url=https://raw.githubusercontent.com/Orz-3/task/master/txnews.png, enabled=true
 
