--- a/Loon/Cookie.conf
+++ b/Loon/Cookie.conf
@@ -1,7 +1,7 @@
 # 获取Cookie订阅
 # 该订阅仅适用于定时签到脚本的Cookie获取
 
-hostname = *.iqiyi.com, www.52pojie.cn, api.inews.qq.com
+hostname = *.iqiyi.com, www.52pojie.cn, api.inews.qq.com,*.video.qq.com , 
 
 # > 爱奇艺
 http-request https?:\/\/.*\.iqiyi\.com\/.*authcookie= script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
@@ -9,5 +9,8 @@ http-request https?:\/\/.*\.iqiyi\.com\/.*authcookie= script-path=https://raw.gi
 # > 吾爱破解
 http-request https:\/\/www\.52pojie\.cn\/home\.php\? script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
 
-# > 腾讯新闻 (By 红鲤鱼与绿鲤鱼与驴 & @Macsuny)
+# > 腾讯新闻
 http-request https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/txnews.js, requires-body=true
+
+# > 腾讯视频
+http-request ^https:\/\/access.video.qq.com\/user\/auth_refresh script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
