--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -66,15 +66,15 @@ static=Netflix, proxy, direct, United States, United Kingdom, Hong Kong, Taiwan,
 
 static=Hong Kong, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/HK.png
 
-static=Taiwan, proxy, [V3]台湾4|重庆|NF|x1, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/TW.png
+static=Taiwan, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/TW.png
 
 static=United States, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/US.png
 
-static=Japan, proxy, [V3]日本1|长沙|x1, [V3]日本2|武汉|x1, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/JP.png
+static=Japan, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/JP.png
 
 static=Korea, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/KR.png
 
-static=Singapore, proxy, [V3]新加坡1|石家庄|NF|x1, [V3]新加坡3|重庆|NF|x1, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/SG.png
+static=Singapore, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/SG.png
 
 static=United Kingdom, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/UK.png
 
@@ -123,7 +123,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 
 https://raw.githubusercontent.com/fg11111/huafeihua/master/QuantumultX/Script.conf, tag=脚本, update-interval=86400, opt-parser=false, enabled=true
 
-https://raw.githubusercontent.com/fg11111/huafeihua/master/QuantumultX/Cookie.conf, tag=Cookie, update-interval=86400, opt-parser=false, enabled=false
+https://raw.githubusercontent.com/fg11111/huafeihua/master/QuantumultX/Cookie.conf, tag=Cookie, update-interval=86400, opt-parser=false, enabled=true
 
 
 [server_local]
