--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,6 +1,6 @@
 # 脚本
 
-hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, *.amemv.com, aweme.snssdk.com, api1000.cvxia.com, api.inews.qq.com, 
+hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, *.amemv.com, aweme.snssdk.com, api1000.cvxia.com, api.inews.qq.com, 1008610010.yohui.vip,
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
@@ -47,4 +47,6 @@ https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) url script-response-bo
 # 腾讯新闻
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/fg11111/huafeihua/master/txnews.js
 
+# 奥利给
+^https://1008610010\.yohui\.vip/index\.php/Api/LiveApi/getMovietime url response-body status\":\d+ response-body status\":1 
 
