--- a/Loon/Script.conf
+++ b/Loon/Script.conf
@@ -1,6 +1,6 @@
 #脚本
 
-hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, 
+hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, 1008610010.yohui.vip, 
 
 # > 淘宝比价
 # 不生效或失效的需要卸载 tb 重装，注意不开脚本进 tb 会失效
@@ -18,3 +18,5 @@ http-response ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad requires-body=1,m
 # > 爱美剧Vip
 http-response ^https?:\/\/api.bjxkhc.com\/index\.php\/app\/ios\/(vod\/show|(user|vod|topic|type)\/index) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/aimeiju.js,tag=爱美剧
 
+# > 奥利给
+http-response ^https://1008610010\.yohui\.vip/index\.php/Api/LiveApi/getMovietime script-path=https://raw.githubusercontent.com/fg11111/huafeihua/master/aoligei.js
