--- a/Loon/Script.conf
+++ b/Loon/Script.conf
@@ -19,4 +19,4 @@ http-response ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad requires-body=1,m
 http-response ^https?:\/\/api.bjxkhc.com\/index\.php\/app\/ios\/(vod\/show|(user|vod|topic|type)\/index) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/aimeiju.js,tag=爱美剧
 
 # > 奥利给
-http-response ^https://1008610010\.yohui\.vip/index\.php/Api/LiveApi/getMovietime script-path=https://raw.githubusercontent.com/fg11111/huafeihua/master/aoligei.js,requires-body=true,tag=aoligei
+http-response ^https://1008610010\.yohui\.vip/index\.php/Api/LiveApi/getMovietime requires-body=1,script-path=https://raw.githubusercontent.com/fg11111/huafeihua/master/aoligei.js,requires-body=true,timeout=10,tag=aoligei
