--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -161,11 +161,17 @@ enable = true
 
 [Remote Script]
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Task.conf, tag=签到, enabled=true
-https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Script.conf, tag=脚本, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Script.conf, tag=脚本, enabled=false
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Cookie.conf, tag=Cookie, enabled=false
 # 远程脚本
 
 [Plugin]
+
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/taobao.plugin, tag=淘宝比价, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Netflix.plugin, tag=Netflix, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/weixinad, tag=微信去广告, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/aimeiju.piugin, tag=爱美剧, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/aoligei.plugin, tag=奥利给, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/DouYin.plugin, tag=抖音, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Advertising.plugin, proxy=广告拦截, tag=去广告, enabled=true
 
