--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -23,13 +23,8 @@ hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, a
 ^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/general\/search\/single\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
 ^https?+:\/\/[\w-]++\.amemv\.com\/aweme\/v\d\/hot\/search\/video\/list\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Choler/Script/douyin_qx.js
 
-# 爱美剧Vip (by huihui）(官网：app.meiju2018.com)
-#ads
-^http(s)://api.bjxkhc.com/index.php/app/ios/ads/index url reject-dict
-^http(s)://api.bjxkhc.com/index.php/app/ios/ver/index_ios$ url reject
-^http(s)://api.bjxkhc.com/index.php/app/ios/pay/ok$ url reject-dict
-#VIP&ads
-^http(s)://api.bjxkhc.com/index.php/app/ios/(vod/show|(user|vod|topic|type)/index) url script-response-body https://raw.githubusercontent.com/wf021325/qx/master/js/aimeiju.js
+# 爱美剧
+^https?:\/\/api.bjxkhc.com\/index\.php\/app\/ios\/(vod\/show|(user|vod|topic|type)\/index) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/aimeiju.js
 
 # 淘宝历史比价 (by yichahucha)
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
