--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -167,6 +167,7 @@ https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Cookie.conf, tag
 
 [Plugin]
 
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Cookie.plugin, tag=Cookie, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Task.plugin, tag=签到, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/taobao.plugin, tag=淘宝比价, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Netflix.plugin, tag=Netflix, enabled=true
