--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -22,12 +22,12 @@ hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, a
 # 单集评分
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/warmer/.+type=show-ath url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating_season.js
 
-# 黄瓜视频
+# 黄瓜视频vip
 https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) url script-response-body https://raw.githubusercontent.com/fg11111/huafeihua/master/hgsp.js
 
-# 腾讯新闻
+# 腾讯新闻去广告
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/fg11111/huafeihua/master/txnews.js
 
-# 奥利给
+# 奥利给vip
 ^https://1008610010\.yohui\.vip/index\.php/Api/LiveApi/getMovietime url response-body status\":\d+ response-body status\":1 
 
