--- a/Loon/Cookie.conf
+++ b/Loon/Cookie.conf
@@ -1,10 +1,10 @@
 # 获取Cookie订阅
 # 该订阅仅适用于定时签到脚本的Cookie获取
 
-hostname = *.iqiyi.com, www.52pojie.cn, api.inews.qq.com,*.video.qq.com , 
+hostname = ifac*.iqiyi.com, www.52pojie.cn, api.inews.qq.com,*.video.qq.com , 
 
 # > 爱奇艺
-http-request https?:\/\/.*\.iqiyi\.com\/.*authcookie= script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+http-request ^https?:\/\/iface(\d)?\.iqiyi\.com\/ script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
 # > 吾爱破解
 http-request https:\/\/www\.52pojie\.cn\/home\.php\? script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
