--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -31,4 +31,5 @@ https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-reque
 # 奥利给vip
 ^https://1008610010\.yohui\.vip/index\.php/Api/LiveApi/getMovietime url response-body status\":\d+ response-body status\":1 
 
-
+# 91短视频
+^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/JungegeCN/JGG/master/91.js
