--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,6 +1,6 @@
 # 脚本
 
-hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, *.amemv.com, api1000.cvxia.com, api.inews.qq.com, 1008610010.yohui.vip, api.dushu.io, 
+hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, api1000.cvxia.com, api.inews.qq.com, 1008610010.yohui.vip, api.dushu.io, *.i91porn.*, *.tbrapi.*, 
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
@@ -31,8 +31,11 @@ https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-reque
 # 奥利给vip
 ^https://1008610010\.yohui\.vip/index\.php/Api/LiveApi/getMovietime url response-body status\":\d+ response-body status\":1 
 
-# 91短视频
-^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/JungegeCN/JGG/master/91.js
+#91短视频
+^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/JungegeCN/JGG/master/91-ttt.js
 
-# 樊登读书1
+#汤头条
+^https?:\/\/.+\.(.*tbrapi.*)\.(com|tips|app|xyz)(:\d{2,5})?\/api.php/.*$ url script-response-body https://raw.githubusercontent.com/JungegeCN/JGG/master/91-ttt.js
+
+# 樊登读书
 https://api.dushu.io/Album/Info url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fdds.js
