--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -1,6 +1,6 @@
 # 脚本
 
-hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, api1000.cvxia.com, api.inews.qq.com, 1008610010.yohui.vip, api.dushu.io, www.helloshiyu.com, getway.radio.cn, *.huaerdadi.com
+hostname = mp.weixin.qq.com, ios.prod.ftl.netflix.com, trade-acs.m.taobao.com, api.bjxkhc.com, api1000.cvxia.com, api.inews.qq.com, 1008610010.yohui.vip, api.dushu.io, www.helloshiyu.com, getway.radio.cn, *.huaerdadi.com, *.xxjjappss.com
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
