--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -14,4 +14,5 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js
 
 # 中国联通
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/10010/unicom_checkin.quanx
+^https?:\/\/m\.client\.10010\.com\/dailylottery\/static\/(integral|doubleball)\/firstpage url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/10010/unicom_checkin.js
+
