--- a/Loon/Cookie.conf
+++ b/Loon/Cookie.conf
@@ -1,7 +1,7 @@
 # 获取Cookie订阅
 # 该订阅仅适用于定时签到脚本的Cookie获取
 
-hostname = ifac*.iqiyi.com, www.52pojie.cn, api.inews.qq.com,*.video.qq.com , 
+hostname = ifac*.iqiyi.com, www.52pojie.cn, api.inews.qq.com,
 
 # > 爱奇艺
 http-request ^https?:\/\/iface(\d)?\.iqiyi\.com\/ script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
@@ -12,5 +12,3 @@ http-request https:\/\/www\.52pojie\.cn\/home\.php\? script-path=https://raw.git
 # > 腾讯新闻
 http-request https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js
 
-# > 腾讯视频
-http-request ^https:\/\/access.video.qq.com\/user\/auth_refresh script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
