--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -14,4 +14,4 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js
 
 # qq阅读
-^https:\/\/(commontgw6|eventv3)\.reader\.qq\.com\/* url script-request-body https://raw.githubusercontent.com/XidNDD/2020scripts/master/QQReadSign.js
+^https:\/\/(commontgw6|eventv3)\.reader\.qq\.com\/* url script-request-header https://raw.githubusercontent.com/XidNDD/2020scripts/master/QQReadSign.js
