--- a/QuantumultX/Cookie.conf
+++ b/QuantumultX/Cookie.conf
@@ -14,4 +14,7 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js
 
 # 腾讯视频
-^https:\/\/access.video.qq.com\/user\/auth_refresh url script-request-header videoqq.cookie.js
+^https:\/\/access.video.qq.com\/user\/auth_refresh url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
+^https?:\/\/v.qq.com\/x\/bu\/mobile_checkin url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
+
+
