--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -8,7 +8,7 @@ skip-proxy = 10.0.0.0/8,127.0.0.0/8,169.254.0.0/16,192.0.2.0/24,192.168.0.0/16,1
 bypass-tun = 10.0.0.0/8,127.0.0.0/8,169.254.0.0/16,192.0.2.0/24,192.168.0.0/16,198.51.100.0/24,224.0.0.0/4
 # [DNS] => DNS 服务器
 dns-server = system,1.2.4.8,119.29.29.29,223.5.5.5
-allow-wifi-access = true
+allow-wifi-access = false
 wifi-access-http-port = 7222
 wifi-access-socket5-port = 7221
 proxy-test-url = http://www.qualcomm.cn/generate_204
@@ -28,20 +28,20 @@ host = 127.0.0.1
 # NodeSelect: 使用在UI上选择的节点。
 # NameKeyword: 根据提供的关键词对订阅中所有节点的名称进行筛选，使用筛选后的节点。
 # NameRegex: 根据提供的正则表达式对订阅中所有节点的名称进行筛选，使用筛选后的节点。
-🌸花开花落 = NodeSelect,✈️机场1,✈️机场2, ✈️机场3, FilterKey = "(?!.*(香港|台湾)).*(V3)"
-新加坡 = NameRegex,✈️机场1,✈️机场2, ✈️机场3, FilterKey = "(?!.*(香港|台湾)).*(V3)"
-日本 = NameRegex,✈️机场1,✈️机场2, ✈️机场3, FilterKey = "日本|JP"
-韩国 = NodeSelect,✈️机场1,✈️机场2, ✈️机场3, FilterKey = "鲁"
-美国 = NameRegex,✈️机场1,✈️机场2, ✈️机场3, FilterKey = "美国|US"
-Other = NodeSelect,✈️机场1,✈️机场2, ✈️机场3, 
+🌸花开花落 = NodeSelect,✈️机场1,✈️机场2,✈️机场3, FilterKey = "(?!.*(香港|台湾)).*(V3)"
+新加坡 = NameRegex,✈️机场1,✈️机场2,✈️机场3, FilterKey = "(?!.*(香港|台湾)).*(V3)"
+日本 = NameRegex,✈️机场1,✈️机场2,✈️机场3, FilterKey = "日本|JP"
+韩国 = NodeSelect,✈️机场1,✈️机场2,✈️机场3, FilterKey = "鲁"
+美国 = NameRegex,✈️机场1,✈️机场2,✈️机场3, FilterKey = "美国|US"
+Other = NodeSelect,✈️机场1,✈️机场2,✈️机场3
 [Proxy]
 # 本地节点
 
 # 内置 DIRECT、REJECT 策略
 
 # 节点名称 = 协议，服务器地址，服务器端口，加密协议，密码，
-1 = Shadowsocks,1.2.3.4,443,aes-128-gcm,"”password“"
-2 = Shadowsocks,1.2.3.4,443,aes-128-gcm,"”password“"
+1 = Shadowsocks,1.2.3.4,443,aes-128-gcm,"”password“",fast-open=false
+2 = Shadowsocks,1.2.3.4,443,aes-128-gcm,"”password“",fast-open=false
 3 = ShadowsocksR,1.2.3.4,443,aes-256-cfb,"”password“",auth_aes128_md5,{},tls1.2_ticket_auth,{}
 4 = ShadowsocksR,1.2.3.4,10076,aes-128-cfb,"”password“",auth_aes128_md5,{},tls1.2_ticket_auth,{}
 # vmess
@@ -58,18 +58,15 @@ Other = NodeSelect,✈️机场1,✈️机场2, ✈️机场3,
 苹果服务 = select,直连,手动选择
 
 # 节点选项
-节点选择 = select,花开花谢,自动测速,手动选择,健康检测
+节点选择 = select,花开花谢,手动选择
 
 # url-test模式，给提供的url发出http header请求，根据返回结果，选择测速最快的节点，默认间隔600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
-自动测速 = select,新加坡
 
 # select模式,手动选择模式
 手动选择 = select,新加坡
 
 # fallback模式，和url-test类似，不同的是会根据顺序返回第一个可用的节点，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
-健康检测 = select,新加坡,REJECT
 
-TikTok = select,节点选择,直连
 Netflix = select,新加坡,直连
 Telegarm = select,节点选择,直连
 国外影视 = select,节点选择,直连
@@ -106,6 +103,7 @@ GEOIP,CN,直连
 FINAL,苹果服务
 
 [Remote Rule]
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising.list, policy=REJECT, tag=去广告, enabled=true
 # 订阅规则
 
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Unbreak.list, tag=后续修正, enabled=true
@@ -139,25 +137,27 @@ enable = true
 
 [Script]
 # 本地脚本
-enable = true
+enable = false
 
 [Remote Script]
-https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Task.conf, tag=签到, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Task.conf, tag=签到, enabled=false
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Script.conf, tag=脚本, enabled=false
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Cookie.conf, tag=Cookie, enabled=false
 # 远程脚本
 
 [Plugin]
-
-https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Cookie.plugin, tag=Cookie, enabled=true
-https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Task.plugin, tag=签到, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Advertising/Advertising.plugin, proxy=REJECT, tag=去广告, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Cookie.plugin, tag=Cookie, enabled=false
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Task.plugin, tag=签到, enabled=false
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/taobao.plugin, tag=淘宝比价, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/Netflix.plugin, tag=Netflix, enabled=true
-https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/weixinad, tag=微信去广告, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/weixinad.plugin, tag=微信去广告, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/aimeiju.piugin, tag=爱美剧, enabled=true
 https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/aoligei.plugin, tag=奥利给, enabled=true
-https://raw.githubusercontent.com/Tartarus2014/For-own-use/master/Loon/Plugin/DouYin.plugin, tag=抖音, enabled=true
-https://raw.githubusercontent.com/Tartarus2014/For-own-use/master/Loon/Plugin/Advertising.plugin, proxy=广告拦截, tag=去广告, enabled=true
+https://raw.githubusercontent.com/fg11111/huafeihua/master/Loon/Plugin/douyin.plugin, tag=抖音, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/TF-Download.plugin, tag=TF-Download, enabled=true
+
+
 
 [MITM]
 ca-p12 = 
