--- a/QuantumultX/Script.conf
+++ b/QuantumultX/Script.conf
@@ -29,7 +29,7 @@ https:\/\/api1000\.cvxia\.com\/(user\/info|mov\/browse2*) url script-response-bo
 https:\/\/api\.inews\.qq\.com\/event\/v1\/user\/event\/report\? url script-request-body https://raw.githubusercontent.com/fg11111/huafeihua/master/txnews.js
 
 # 奥利给vip
-^https://1008610010\.laikanshu\.top/Member/getUserInfo url response-body status\":\d+ response-body status\":1 
+^https://1008610010\.laikanshu\.top/Member/getUserInfo url response-body is_vip\":\d+ response-body is_vip\":1 
 
 # 睡眠助手vip
 https://www.helloshiyu.com/sleep/user/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/smzs.js
